--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -44,6 +44,7 @@
   height: 100%;
   border-bottom: 3px solid transparent;
 }
+
 .fa-code {
   margin-left: 1rem;
 }
@@ -53,7 +54,7 @@
   margin-right: 1rem;
 }
 
-.nav-item:after {
+.nav-item::after {
   content: "";
   display: block;
   height: 3px;
@@ -62,7 +63,7 @@
   transition: width 0.7s ease, background-color 0.5s ease;
 }
 
-.nav-item:hover:after {
+.nav-item:hover::after {
   width: 100%;
   background: #ffdd40;
 }
@@ -78,8 +79,8 @@
   cursor: pointer;
   appearance: none;
   background-color: inherit;
-  transition: transform .7s ease-in-out;
-  margin-left:10px;
+  transition: transform 0.7s ease-in-out;
+  margin-left: 10px;
 }
 
 .mobile-icons {
@@ -91,7 +92,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    border-top: 1pxsolid #fff;
+    border-top: 1px solid #ffffff58;
     position: absolute;
     top: 80px;
     left: -110%;
@@ -101,15 +102,17 @@
 
   .nav-menu.active {
     background: linear-gradient(to right, #f2689d, #ec4c8a);
-    left: 0px;
+    left: 0;
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 1;
   }
+
   .nav-item .active {
     color: #ffdd40;
     border: none;
   }
+
   .nav-links {
     padding: 1.5rem;
     width: 100%;
@@ -151,7 +154,7 @@
     width: 30px;
   }
 
-  .mic, 
+  .mic,
   .search {
     filter: invert(100%) sepia(0%) saturate(2449%) hue-rotate(190deg) brightness(108%) contrast(101%);
   }
